# MTG-Deck-Analyzer

./: .env.example  .gitignore  ADR.md  ALGORITHM_ROADMAP.md  FRONTEND_PLAN.md  PHASE2_IMPLEMENTATION.md  PLAN.md  README.md  STRATEGY_GUIDE_PLAN.md  pyproject.toml
.tmp/pytest-of-tammergalal/: pytest-current
frontend/: index.html  package-lock.json  package.json  tsconfig.test.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
src/mtg_deck_maker/: __init__.py  cli.py  config.py
tests/: conftest.py  test_cli.py  test_config.py
tests/test_advisor/: test_analyzer.py  test_anthropic_provider.py  test_llm_advisor.py  test_llm_categorizer.py  test_llm_provider.py  test_llm_synergy.py  test_openai_provider.py  test_retry.py  test_upgrade.py
tests/test_api/: test_commanderspellbook.py  test_edhrec.py  test_edhrec_enhanced.py  test_pricing.py  test_rate_limiter.py  test_scryfall.py
tests/test_api_web/: conftest.py  test_cards.py  test_config.py  test_decks.py  test_health.py  test_research.py  test_schema_validation.py  test_sync.py
tests/test_cli_serve/: test_benchmark.py  test_serve.py
tests/test_db/: test_card_repo.py  test_combo_repo.py  test_database.py  test_deck_repo.py  test_edhrec_repo.py  test_llm_synergy_repo.py  test_price_repo.py  test_printing_repo.py
tests/test_engine/: test_budget_optimizer.py  test_categories.py  test_deck_builder.py  test_llm_synergy_integration.py  test_mana_base.py  test_power_level.py  test_strategy_guide.py  test_synergy.py  test_synergy_audit.py
tests/test_io/: test_csv_export.py  test_csv_import.py
(+247 files in other folders)
