[project]
name = "mtg-deck-maker"
version = "0.1.0"
description = "CLI-based Magic: The Gathering Commander deck builder"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "anthropic>=0.40",
    "rich>=13.0",
    "thefuzz[speedup]>=0.22",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
ml = ["scikit-learn>=1.3"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "vcrpy>=6.0",
    "httpx>=0.27",
]
all = ["mtg-deck-maker[openai]", "mtg-deck-maker[ml]"]

[project.scripts]
mtg-deck = "mtg_deck_maker.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mtg_deck_maker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
